--- a/styles/crossword.css
+++ b/styles/crossword.css
@@ -5,3 +5,19 @@
 #creationApp{
     display: none;
 }
+
+tr{
+    margin:0;
+    padding:0;
+}
+
+td{
+    border: 2px solid black;
+    margin: 0;
+    height: 20px;
+    width: 20px;
+    
+    font-size: 1.2em;
+    text-align: center;
+    vertical-align: middle;
+}
